--- a/projeto_bluemusic/templates/index.html
+++ b/projeto_bluemusic/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Spotify</title>
+	<title>Spockfy</title>
 	<meta charset="utf-8">
+	<link rel="shortcut icon" href="/projeto_bluemusic/static/img/page_icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../static/style.css">
 </head>
@@ -37,26 +38,26 @@
 
 			<div class="sidebar__playlists">
 				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
+				<a href="">Playlist 2</a>
+				<a href="">Playlist 3</a>
+				<a href="">Playlist 4</a>
+				<a href="">Playlist 5</a>
 			</div><!--sidebar-playlists-->
 
 			<div class="sidebar__playlists">
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
+				<a href="">Playlist 6</a>
+				<a href="">Playlist 7</a>
+				<a href="">Playlist 8</a>
+				<a href="">Playlist 9</a>
+				<a href="">Playlist 10</a>
 			</div><!--sidebar-playlists-->
 
 			<div class="sidebar__playlists">
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
-				<a href="">Playlist 1</a>
+				<a href="">Playlist 11</a>
+				<a href="">Playlist 12</a>
+				<a href="">Playlist 13</a>
+				<a href="">Playlist 14</a>
+				<a href="">Playlist 15</a>
 			</div><!--sidebar-playlists-->
 
 
@@ -134,6 +135,18 @@
 					<img src="../static/img/gunsrools.png" />
 					<h3>Guns N Roses</h3>
 					<p>Sweet Child Of Mine</p>
+				</div><!--main__col-->
+
+				<div class="main__col" data-image="../img/rocky.png" data-artist="Rocky Balboa" data-song="Gona Fly" data-file="../static/assets/music.mp3">
+					<img src="../static/img/rocky.png" />
+					<h3>Rocky Balboa</h3>
+					<p>Aqui vai a descrição da minha música...</p>
+				</div><!--main__col-->
+
+				<div class="main__col" data-image="../img/Bo_Rhapsody.png" data-artist="Queen" data-song="Bohemian Rhapsody" data-file="../static/assets/Queen_Bohemian Rhapsody.mp3">
+					<img src="../static/img/Bo_Rhapsody.png" />
+					<h3>Queen</h3>
+					<p>Bohemian Rhapsody</p>
 				</div><!--main__col-->
 
 				<div class="main__col" data-image="../img/rocky.png" data-artist="Rocky Balboa" data-song="Gona Fly" data-file="../static/assets/music.mp3">
